added comments and discussion

--- a/notebooks/03-active_learning_for_DFT_surrogate.ipynb
+++ b/notebooks/03-active_learning_for_DFT_surrogate.ipynb
@@ -249,7 +249,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define Acquisition  Functions"
+    "### Define Acquisition  Functions\n",
+    "\n",
+    "Here I define four different acquisition functions: the maximum uncertainty (MU), maximum expected improvement (MEI), maximum likelihood improvement (MLI), and the upper confidence bound (UCB). In addition, I use a mixed acquisition method which first employs a MU to reduce the overall uncertainty of the model, and then employs a MIE to optimize the material property.\n",
+    "\n",
+    "More details on the acquistion functions can be found [here](link)"
    ]
   },
   {
@@ -299,7 +303,7 @@
     "    return y_pred, y_std\n",
     "\n",
     "\n",
-    "# active learning training - GPR\n",
+    "# active learning training - RF\n",
     "def train_activemodel_rf(X, y, pool): \n",
     "    xtrain, xtest = X[X.index.isin(pool)], X[~X.index.isin(pool)]\n",
     "    ytrain, ytest = y[y.index.isin(pool)], y[~y.index.isin(pool)]\n",
