--- a/notebooks/04-active_learning_property_optimization.ipynb
+++ b/notebooks/04-active_learning_property_optimization.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title"
+    "# Active Learning Demo - Material Property Optimization\n",
+    "\n",
+    "Active learning is used to efficiently optimize a material proeprty. I test two machine learning algorithms - Gaussian process regression (GRP) and random forest (RF). By determining the uncertainty in each model's predictions and using different acquisition function, I can effectively optimize a material proeprty with fewer data points than a random sampling approach. Here, I use a custom dataset of van der Waals (vdW) heterostructure features and target properties that were generated through a high-throughput DFT workflow. More details on the materials and this dataset can be found in this notebook: [01-data_exploration.ipynb](https://github.com/dwillhelm/ActiveHetML/blob/main/notebooks/01-data_exploration.ipynb). "
    ]
   },
   {
@@ -166,6 +168,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Plot Index vs IE** and identify global maximum. In the above figure, we see that the global maximum IE is around 8.7 eV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Acquisition  Functions\n",
+    "\n",
+    "Here I define four different acquisition functions: the maximum uncertainty (MU), maximum expected improvement (MEI), maximum likelihood improvement (MLI), and the upper confidence bound (UCB). In addition, I use a mixed acquisition method which first employs a MU to reduce the overall uncertainty of the model, and then employs a MIE to optimize the material property.\n",
+    "\n",
+    "More details on the acquistion functions can be found [here](link)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -295,7 +315,7 @@
     "        y_pred, y_std = train_activemodel(pipe, X ,y, idx_mix, METHOD)\n",
     "        if i <= 10: \n",
     "            idx_mix = update_mu(y_pred, y_std, idx_mix)\n",
-    "        if i > 33: \n",
+    "        if i > 10: \n",
     "            idx_mix = update_mei(y_pred, y_std, idx_mix)\n",
     "        res.append([i, 'mixed', y_best, y_best_idx, len(idx_mix) ])\n",
     "\n",
@@ -380,6 +400,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**RF Sequential Learning** In the above figure, we can see that a sequential learning approach can identify the global maximum IE in fewer steps compared to random selection. The MEI aquisition function showed the fastest convergence. While the random selection also quickly approaches the maxima, it does not find the global max. The MLI and UCB methods find the glboal max after ~15 iterations. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -455,6 +482,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**GPR Sequential Learning** In the above figure, we can again see the advantage of sequential learning. Using the GPR model, The MU and MIXED methods outperformed the random selection and other acquisition functions. This demonstrates that it is important to test different aquisition functions as there is no universal best. The MU and MIX methods might have been more succesful here because the GPR model was slower to learn compared to the RF model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimize for a Specific IE\n",
+    "\n",
+    "While identifing the greatest IE value in the dataset could be useful. It might be more useful to identify materials with a specific IE. To do this, I will map the features to a new response variable. The new response variable is essentially a metric of how close a predicted IE is to a target IE:\n",
+    "\n",
+    "$y' = -|y - y^*|$\n",
+    "\n",
+    "where $y'$ is the new target value we map to, $y$ is the DFT labeled IE, $y^*$ is the target IE. The negative sign means that the global max is now $y'>=$ than zero (i.e. still a maximization problem), and ensures that we can apply the same acquisition functions to the problem."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -479,7 +526,7 @@
     "y0 = y.copy() \n",
     "\n",
     "# adjust to target a specific IE \n",
-    "target_IE = 4.0\n",
+    "target_IE = 5.56\n",
     "y = abs(y.copy() - target_IE) * -1\n",
     "\n",
     "fig, ax = plt.subplots() \n",
@@ -488,6 +535,13 @@
     "ax.grid(True, alpha=0.2) \n",
     "ax.legend(loc=4) \n",
     "plt.show() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Plot Index vs IE** and identify global maximum. In the above figure, we can identify the target IE. "
    ]
   },
   {
@@ -591,6 +645,13 @@
     "ax.set_xlabel('Num. data points')\n",
     "ax.set_ylabel('IE (eV)')\n",
     "ax.grid(True, alpha=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sequential Learning**  In the above two figures we can see how sequential learning helps us converge on the target IE faster than random selection."
    ]
   }
  ],
