embedded some figs

--- a/notebooks/02-machine_learning.ipynb
+++ b/notebooks/02-machine_learning.ipynb
@@ -424,7 +424,14 @@
     "\n",
     "Here, I use the default RBF kernel. In GRP the kernel is a very important hyperparamter that need to be carefully selected. When working with small data, it is often difficult to tune hyperparamters without introducint sample bias. Generally, one might update hyperparameters as new data points are generated in a full active learning pipeline. From a Bayesian perspective, this distribution of functions provides a prior, which can be used to determine the posterior distribution. Using the Bayesian approach, the distribution of functions is updated new data points are considered - allowing for iterative optimization of your model.  \n",
     "\n",
-    "I choose this algorithm to test because GPR are one of the most commonly used algorithms in active learning. GPR are fairly versitile models capable of taking varying types of input values. However, GPR are oftentimes difficult to fit, kernel choice can be difficult, and do not scale efficeintly. "
+    "I choose this algorithm to test because GPR are one of the most commonly used algorithms in active learning. GPR are fairly versitile models capable of taking varying types of input values. However, GPR are oftentimes difficult to fit, kernel choice can be difficult, and do not scale efficeintly. \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "![alt](../docs/figs/gpr_diag.png)\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -613,7 +620,15 @@
     "\n",
     "Again, I use the default hyperparameters, but these could be iteratively optimized in a full active learning pipeline (e.g., using grid search or random search of hyperparameters). RF are generally roboust to the scale of the data, so I will bypass building a pipeline for this model. \n",
     "\n",
-    "RF models are also very flexible models - able to capture nonlinear relationships in the data. Furthermore, these models offer more explainability compared to other models (such as feature importance). However, these models are prone to overfitting and can be difficult to tune as the many hyper parameters make it a relatively complex model. "
+    "RF models are also very flexible models - able to capture nonlinear relationships in the data. Furthermore, these models offer more explainability compared to other models (such as feature importance). However, these models are prone to overfitting and can be difficult to tune as the many hyper parameters make it a relatively complex model. \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "![alt](../docs/figs/rf_diag.png)\n",
+    "\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
