--- a/notebooks/02-machine_learning.ipynb
+++ b/notebooks/02-machine_learning.ipynb
@@ -778,7 +778,9 @@
    "source": [
     "**True vs Predicted**\n",
     "\n",
-    "Here the ML predicted values are compared with the DFT labeled values. All three models are highly accurate. The GPR has a few significant underestimates for 6-7 materials. Since the GPR and RF model are able to determine the uncertainty easily, I will use both in an active learning approach. "
+    "Here the ML predicted values are compared with the DFT labeled values. All three models are highly accurate. The GPR has a few significant underestimates for 6-7 materials. Since the GPR and RF model are able to determine the uncertainty easily, I will use both in an active learning approach. \n",
+    "\n",
+    "In the [next Notebook](./03-active_learning_for_DFT_surrogate.ipynb) I will demonstrate how active learning can be build a ML model with fewer data points using Active Learning. \n"
    ]
   }
  ],
