--- a/notebooks/04-active_learning_property_optimization.ipynb
+++ b/notebooks/04-active_learning_property_optimization.ipynb
@@ -182,7 +182,41 @@
     "\n",
     "Here I define four different acquisition functions: the maximum uncertainty (MU), maximum expected improvement (MEI), maximum likelihood improvement (MLI), and the upper confidence bound (UCB). In addition, I use a mixed acquisition method which first employs a MU to reduce the overall uncertainty of the model, and then employs a MIE to optimize the material property.\n",
     "\n",
-    "More details on the acquistion functions can be found [here](link)"
+    "**MU:**  \n",
+    "This function queries the sample with the highest uncertainty.\n",
+    "<br>\n",
+    "$$ x^* = arg\\_max \\enspace \\sigma[f(x_i)]$$\n",
+    "<br>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**MEI:**  \n",
+    "This approach takes the maximum value of the prediction of the model over the possible experiments to run.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$ x^* = arg\\_max \\enspace E[f(x_i)]$$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**MLI:**  \n",
+    "This approach tells us that we are expecting to query a region for which we see an improvement and sufficient uncertainty to have a high likelihood of getting a larger value.\n",
+    "\n",
+    "$$ x^* = arg\\_max \\enspace \\frac{E[f(x_i)] - E[f(x_{best})]}{\\sigma[f(x_i)]}$$\n",
+    "\n",
+    "$x_{best}$ is the current best value in the training dataset.\n",
+    "\n",
+    "\n",
+    "**UCB:**  \n",
+    "This strategy queries the sample with the maximum value of its mean prediction plus its uncertainty.\n",
+    "<br>\n",
+    "$$ x^* = arg\\_max \\enspace [E[f(x_i)] + \\sigma[f(x_i)]]$$\n",
+    "<br>\n",
+    "\n",
+    "$x^*$ is the new sample pulled using the acquistion function.  \n",
+    "$\\sigma$ is the standard deviation ($\\sigma^2$ is the variance)  \n",
+    "$f(x_i)$ is the model and $x_i$ is a given predicted data point.  \n",
+    "$E[...]$ is the expected value."
    ]
   },
   {
