--- a/notebooks/04-bayesian_opt_IE.ipynb
+++ b/notebooks/04-bayesian_opt_IE.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Active Learning Demo - Material Property Optimization\n",
+    "# Bayesian Optimization Demo - vdW Ionization Energy\n",
     "\n",
-    "Active learning is used to efficiently optimize a material proeprty. I test two machine learning algorithms - Gaussian process regression (GRP) and random forest (RF). By determining the uncertainty in each model's predictions and using different acquisition function, I can effectively optimize a material proeprty with fewer data points than a random sampling approach. Here, I use a custom dataset of van der Waals (vdW) heterostructure features and target properties that were generated through a high-throughput DFT workflow. More details on the materials and this dataset can be found in this notebook: [01-data_exploration.ipynb](https://github.com/dwillhelm/ActiveHetML/blob/main/notebooks/01-data_exploration.ipynb). "
+    "Bayesian Optimization is used to efficiently optimize a material proeprty. I test two machine learning algorithms - Gaussian process regression (GRP) and random forest (RF). By determining the uncertainty in each model's predictions and using different acquisition function, I can effectively optimize a material proeprty with fewer data points than a random sampling approach. Here, I use a custom dataset of van der Waals (vdW) heterostructure features and target properties that were generated through a high-throughput DFT workflow. More details on the materials and this dataset can be found in this notebook: [01-data_exploration.ipynb](https://github.com/dwillhelm/ActiveHetML/blob/main/notebooks/01-data_exploration.ipynb). "
    ]
   },
   {
@@ -685,7 +685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sequential Learning**  In the above two figures we can see how sequential learning helps us converge on the target IE faster than random selection."
+    "**Bayesian Optimization**  In the above two figures we can see how Bayesian Optimization helps us converge on the target IE faster than random selection."
    ]
   }
  ],
