add some more commenting...

--- a/notebooks/03-active_learning_for_DFT_surrogate.ipynb
+++ b/notebooks/03-active_learning_for_DFT_surrogate.ipynb
@@ -302,7 +302,18 @@
    "source": [
     "## define some functions here\n",
     "\n",
-    "# acquistion functions\n",
+    "## acquistion functions\n",
+    "\n",
+    "\"\"\"\n",
+    "The update functions follow this general format: \n",
+    "\n",
+    "Arguments: \n",
+    "    y_pred (list, array, DataFrame): predicted values of y\n",
+    "    y_true (list, array, DataFrame): true value of y\n",
+    "    pool   (list): a list of training uids to be updated with the new seleciton\n",
+    "\n",
+    "\"\"\" \n",
+    "\n",
     "def update_random(y_pred, y_std, pool): \n",
     "    new_idx = y_pred.sample(n=1).index[0]\n",
     "    pool.append(new_idx)\n",
